# rmatrix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
driver/: Makefile  driver  driver.c  example.txt
rmatrix/: CMakeLists.txt  Config.cmake.in  rmatrix.pc.in
rmatrix/include/: rmatrix.h
rmatrix/src/: rmatrix.c
rmatrix/test/: CMakeLists.txt
rmatrix/test/src/: test_rmatrix.c
